added Some text as introduction

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
         function PlayClick() {
             clickSound.load();
             clickSound.play();
-
         }
 
         document.body.addEventListener('click', PlayClick);
@@ -35,36 +34,68 @@
             <a href="#">Projects</a>
         </div>
     </nav>
-
+    <p>
+        Hi! I'm Jahzz. I am currently a software engineering undergrad at the University of Texas at Dallas.
+        <br>
+        I wanted to try making this site for funsies after seeing a few friends doing the same.
+    </p>
     <hr>
     <!-- <h2>a</h2> -->
-    <main>
+    <!-- <main>
         <h2>Hobbies</h2>
-    </main>
-    <!-- ### works
+    </main> -->
+    <h2>
+        ### works
+    </h2>
      utd clubs
      lunarly
      lyrical
      personal tutoring
 
-    ### programming languages:
-    React.js, HTML, CSS, JavaScript, Python, C++, Java, SQL, R  
+    <h2>### programming languages</h2>
+    <ul>
+        <li>Proficient:</li>
+        <ul>
+            <li>JavaScript</li>
+            <li>Python</li>
+            <li>HTML/CSS</li>
+        </ul>
+        <li>Familiar:</li>
+        <ul>
+            <li>C++</li>
+            <li>Java</li>
+            <li>SQL</li>
+            <li>R</li>
+        </ul>
+    </ul>
+    <p>React.js, HTML, CSS, JavaScript, Python, C++, Java, SQL, R</p>  
 
-    ### hobbies 
-    minecraft [yt link]
-    10:28 RSG, 8:24 MCSR Ranked
-
-    anime [anilist link] # i could look into adding my link tree here or smth
-    CSM, Dandadan, Made in Abyss etc
-
-    linux
-    fedora 41 linux with niri wm and noctalia shell theme, would love to rice more in the future
-    still using VScode because i love my arrow keys
-
-    music [spotify link]
-    New Jeans, Arctic Monkeys, The Smiths, Frederic Chopin, S3RL, Lamp, 2Hollis, The Hellp etc
-    -->
+    <h2>### hobbies</h2> 
+    <p>minecraft [yt link]
+    10:28 RSG, 8:24 MCSR Ranked</p>
     <img alt="Minecraft Skin">
+
+    <p>anime [anilist link] <!-- # i could look into adding my link tree here or smth -->
+    CSM, Dandadan, Made in Abyss etc </p>
+
+    <h2>### linux</h2>
+    <p>fedora 41 linux with niri wm and noctalia shell theme.
+        <br>
+        Would love to rice more in the future, but I'm still using VScode because i love my arrow keys <3</p>
+
+    <h2>music [spotify link]</h2>
+    <ul>
+        <li>New Jeans</li>
+        <li>Arctic Monkeys</li>
+        <li>The Smiths</li>
+        <li>Frederic Chopin</li>
+        <li>S3RL</li>
+        <li>Lamp</li>
+        <li>2Hollis</li>
+        <li>The Hellp</li>    
+    </ul> 
+    <!--New Jeans, Arctic Monkeys, The Smiths, Frederic Chopin, S3RL, Lamp, 2Hollis, The Hellp etc -->
+    
      <footer>
         <hr>
         <p>&copy; 2026 Jahzz.</p>
