added links for my yt and anilist

--- a/index.html
+++ b/index.html
@@ -39,51 +39,60 @@
         <br>
         I wanted to try making this site for funsies after seeing a few friends doing the same.
     </p>
+
+    <p> 
+        I love collecting stickers for my laptop, and my guilty pleasure is watching The Primagen and Fireship.
+    </p>
     <hr>
+    <a href="https://linktr.ee/jqhz">My Linktree</a>
     <!-- <h2>a</h2> -->
     <!-- <main>
         <h2>Hobbies</h2>
     </main> -->
-    <h2>
-        ### works
-    </h2>
-     utd clubs
-     lunarly
-     lyrical
-     personal tutoring
-
-    <h2>### programming languages</h2>
+    <h2>### Works</h2>
     <ul>
-        <li>Proficient:</li>
-        <ul>
-            <li>JavaScript</li>
-            <li>Python</li>
-            <li>HTML/CSS</li>
-        </ul>
-        <li>Familiar:</li>
-        <ul>
-            <li>C++</li>
-            <li>Java</li>
-            <li>SQL</li>
-            <li>R</li>
-        </ul>
+        <li>UTD Clubs</li>
+        <li>Lunarly</li>
+        <li>Lyrical</li>
+        <li>Personal Tutoring</li>
     </ul>
-    <p>React.js, HTML, CSS, JavaScript, Python, C++, Java, SQL, R</p>  
 
-    <h2>### hobbies</h2> 
-    <p>minecraft [yt link]
-    10:28 RSG, 8:24 MCSR Ranked</p>
+    <h2>### Programming Languages</h2>
+    <ul>
+        <li><strong>Proficient:</strong>
+            <ul>
+                <li>JavaScript</li>
+                <li>Python</li>
+                <li>HTML/CSS</li>
+            </ul>
+        </li>
+        <li><strong>Familiar:</strong>
+            <ul>
+                <li>C++</li>
+                <li>Java</li>
+                <li>SQL</li>
+                <li>R</li>
+            </ul>
+        </li>
+    </ul>
+
+    <h2>### Hobbies</h2>
+    <p>
+        <strong>Minecraft</strong> - <a href="https://www.youtube.com/@jqhz">YouTube Channel</a>
+        <br>10:28 RSG, 8:24 MCSR Ranked
+    </p>
     <img alt="Minecraft Skin">
 
-    <p>anime [anilist link] <!-- # i could look into adding my link tree here or smth -->
-    CSM, Dandadan, Made in Abyss etc </p>
+    <p>
+        <strong>Anime</strong> - <a href="https://anilist.co/user/jahzz/">AniList Profile</a>
+        <br>CSM, Dandadan, Made in Abyss
+    </p>
 
-    <h2>### linux</h2>
-    <p>fedora 41 linux with niri wm and noctalia shell theme.
-        <br>
-        Would love to rice more in the future, but I'm still using VScode because i love my arrow keys <3</p>
+    <h2>### Linux</h2>
+    <p>Fedora 41 with niri WM and Noctalia shell theme. Would love to rice more, but I'm still using VSCode because I love my arrow keys &lt;3 
+    </p>
 
-    <h2>music [spotify link]</h2>
+    <h2>### Music [spotify link]</h2>
     <ul>
         <li>New Jeans</li>
         <li>Arctic Monkeys</li>
