h2 styling fix and silly shake animation

--- a/index.html
+++ b/index.html
@@ -77,17 +77,18 @@
     </ul>
 
     <h2>### Hobbies</h2>
-    <p>
-        <strong>Minecraft</strong> - <a href="https://www.youtube.com/@jqhz">YouTube Channel</a>
-        <br>10:28 RSG, 8:24 MCSR Ranked
-    </p>
-    <img alt="Minecraft Skin">
+    <div class="hobbies">
+        <p>
+            <strong>Minecraft</strong> - <a href="https://www.youtube.com/@jqhz">YouTube Channel</a>
+            <br>10:28 RSG, 8:24 MCSR Ranked
+        </p>
+        <img class="shake" alt="Minecraft Skin">
 
-    <p>
-        <strong>Anime</strong> - <a href="https://anilist.co/user/jahzz/">AniList Profile</a>
-        <br>CSM, Dandadan, Made in Abyss
-    </p>
-
+        <p>
+            <strong>Anime</strong> - <a href="https://anilist.co/user/jahzz/">AniList Profile</a>
+            <br>CSM, Dandadan, Made in Abyss
+        </p>
+    </div>
     <h2>### Linux</h2>
     <p>Fedora 41 with niri WM and Noctalia shell theme. Would love to rice more, but I'm still using VSCode because I love my arrow keys &lt;3 
     </p>
