--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <ul>
         <li>UTD Clubs</li>
         <li>Lunarly</li>
-        <li>Lyrical</li>
+        <li>LyricaL</li>
         <li>Personal Tutoring</li>
     </ul>
 
@@ -93,8 +93,9 @@
     <p>Fedora 41 with niri WM and Noctalia shell theme. Would love to rice more, but I'm still using VSCode because I love my arrow keys &lt;3 
     </p>
 
-    <h2>### Music [spotify link]</h2>
+    <h2>### Music [<a href="https://open.spotify.com/user/jason_cube">spotify link</a>]</h2>
     <ul>
+        <li>Panchiko</li>
         <li>New Jeans</li>
         <li>Arctic Monkeys</li>
         <li>The Smiths</li>
@@ -105,10 +106,22 @@
         <li>The Hellp</li>    
     </ul> 
     <!--New Jeans, Arctic Monkeys, The Smiths, Frederic Chopin, S3RL, Lamp, 2Hollis, The Hellp etc -->
+    <!-- <h2>### Blinkies</h2> -->
+    <div class="blinkies">
+        <img src="./static/blink1.gif" alt="Blinkie 1">
+        <img src="./static/blink2.gif" alt="Blinkie 2">
+        <img src="./static/blink3.gif" alt="Blinkie 3">
+        <img src="./static/blink4.gif" alt="Blinkie 4">
+        <img src="./static/blink5.gif" alt="Blinkie 5">  
+        <img src="./static/blink6.gif" alt="Blinkie 6">
+        <img src="./static/blink7.gif" alt="Blinkie 7">
+        <img src="./static/blink8.gif" alt="Blinkie 8">
+        <img src="./static/blink9.gif" alt="Blinkie 9">
+    </div>
     
-     <footer>
+    <footer>
         <hr>
-        <p>&copy; 2026 Jahzz.</p>
+        <p>&copy; 2026 Jahzz. <a href="https://github.com/jqhz">Source Code</a></p>
     </footer>
 </body>
 </html>
